--- a/index.html
+++ b/index.html
@@ -5,45 +5,25 @@ notitle: true
 
 # groups of columns of {roles: list, width: num, image: bool}
 role-tables:
-- - roles: [faculty, postdoc, staff]
+- - roles: [faculty, postdoc]
     width: 4
     image: true
   - roles: [grad]
     width: 8
     image: true
-- - roles: [collab, ugrad, ugrad-alum]
+- - roles: [ugrad]
     width: 5
-    image: false
-  - roles: [alum]
-    width: 7
     image: false
 
 ---
 
 <div class="jumbotron">
     <p>
-        The <b>Awesome Research Group</b> at <b>Example U</b> does all sorts of
-        research. Here is a place where we tell you exactly what that is!
+        Welcome to the ASKE Yeast Group.
     </p>
 </div>
 
-<section>
-    <h2>News</h2>
-    <ul class="news list-unstyled">
-        {% for post in site.posts limit: site.front_page_news %}
-            {% include news-item.html item=post %}
-        {% endfor %}
-    </ul>
-    {% assign numposts = site.posts | size %}
-    {% if numposts >= 1 %}
-        <p>
-            <span class="fa fa-fw fa-history"></span>
-            <a href="{{ site.base }}/blog.html">Older posts&hellip;</a>
-        </p>
-    {% endif %}
-</section>
-
-<section>
+<!-- <section>
     <h2>Research</h2>
     <div class="card-columns">
         {% comment %}
@@ -57,7 +37,7 @@ role-tables:
             {% endif %}
         {% endfor %}
     </div>
-</section>
+</section> -->
 
 <div id="people">
     <h2>People</h2>
@@ -73,3 +53,20 @@ role-tables:
         </section>
     {% endfor %}
 </div>
+
+
+<!-- <section>
+    <h2>News</h2>
+    <ul class="news list-unstyled">
+        {% for post in site.posts limit: site.front_page_news %}
+            {% include news-item.html item=post %}
+        {% endfor %}
+    </ul>
+    {% assign numposts = site.posts | size %}
+    {% if numposts >= 1 %}
+        <p>
+            <span class="fa fa-fw fa-history"></span>
+            <a href="{{ site.base }}/blog.html">Older posts&hellip;</a>
+        </p>
+    {% endif %}
+</section> -->
