--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ role-tables:
 
 <div class="jumbotron">
     <p>
-        Welcome to the ASKE Yeast Group.
+        The ASKE YEAST GROUP develops mathematical and experimental models of yeast colony growth. Our interdisciplinary approach deepens understanding of fundamental growth mechanisms and their implications for biofilm-forming yeasts of medical and technological importance. We offer PhD scholarships in mathematical & statistical modelling, image analysis, data science and microbiology. Our group comprises leading researchers from Adelaide, Southampton, Kent and Essex (ASKE) Universities.  
     </p>
 </div>
 
